sims.output
Nonterminals useless in grammar

   igualdade
   diferenca


Terminals unused in grammar

   FRO
   SULSUL
   COMMA
   EQ
   GQ
   NE
   'f'
   '%'


Rules useless in grammar

   26 igualdade: exp EQ exp

   27 diferenca: exp NE exp


Grammar

    0 $accept: programa $end

    1 programa: lista_comando

    2 lista_comando: comando EOL lista_comando
    3              | comando EOL

    4 bloco: OPEN_BLOCK lista_comando CLOSE_BLOCK

    5 ident: ID

    6 exp: NUMREAL
    7    | NUMINTEIRO
    8    | ident
    9    | soma
   10    | subtracao
   11    | divisao
   12    | multiplicacao

   13 atribuicao: PABA ident '=' exp
   14           | FIRBS ident '=' exp
   15           | KOOJ ident '=' exp

   16 comando: atribuicao
   17        | bloco
   18        | if_comando

   19 comparacao: atribuicao

   20 soma: exp '+' exp

   21 subtracao: exp '-' exp

   22 divisao: exp '/' exp

   23 multiplicacao: exp '*' exp

   24 if_comando: LOOBLE OPEN_BRACE comparacao CLOSE_BRACE bloco
   25           | LOOBLE OPEN_BRACE comparacao CLOSE_BRACE bloco WOOBLE bloco


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'*' (42) 23
'+' (43) 20
'-' (45) 21
'/' (47) 22
'=' (61) 13 14 15
'f' (102)
error (256)
ID (258) 5
NUMINTEIRO (259) 7
NUMREAL (260) 6
EOL (261) 2 3
FIRBS (262) 14
PABA (263) 13
KOOJ (264) 15
FRO (265)
LOOBLE (266) 24 25
WOOBLE (267) 25
OPEN_BRACE (268) 24 25
SULSUL (269)
CLOSE_BRACE (270) 24 25
OPEN_BLOCK (271) 4
CLOSE_BLOCK (272) 4
COMMA (273)
EQ (274)
GQ (275)
NE (276)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
programa (30)
    on left: 1, on right: 0
lista_comando (31)
    on left: 2 3, on right: 1 2 4
bloco (32)
    on left: 4, on right: 17 24 25
ident (33)
    on left: 5, on right: 8 13 14 15
exp (34)
    on left: 6 7 8 9 10 11 12, on right: 13 14 15 20 21 22 23
atribuicao (35)
    on left: 13 14 15, on right: 16 19
comando (36)
    on left: 16 17 18, on right: 2 3
comparacao (37)
    on left: 19, on right: 24 25
soma (38)
    on left: 20, on right: 9
subtracao (39)
    on left: 21, on right: 10
divisao (40)
    on left: 22, on right: 11
multiplicacao (41)
    on left: 23, on right: 12
if_comando (42)
    on left: 24 25, on right: 18


state 0

    0 $accept: . programa $end

    FIRBS       shift, and go to state 1
    PABA        shift, and go to state 2
    KOOJ        shift, and go to state 3
    LOOBLE      shift, and go to state 4
    OPEN_BLOCK  shift, and go to state 5

    programa       go to state 6
    lista_comando  go to state 7
    bloco          go to state 8
    atribuicao     go to state 9
    comando        go to state 10
    if_comando     go to state 11


state 1

   14 atribuicao: FIRBS . ident '=' exp

    ID  shift, and go to state 12

    ident  go to state 13


state 2

   13 atribuicao: PABA . ident '=' exp

    ID  shift, and go to state 12

    ident  go to state 14


state 3

   15 atribuicao: KOOJ . ident '=' exp

    ID  shift, and go to state 12

    ident  go to state 15


state 4

   24 if_comando: LOOBLE . OPEN_BRACE comparacao CLOSE_BRACE bloco
   25           | LOOBLE . OPEN_BRACE comparacao CLOSE_BRACE bloco WOOBLE bloco

    OPEN_BRACE  shift, and go to state 16


state 5

    4 bloco: OPEN_BLOCK . lista_comando CLOSE_BLOCK

    FIRBS       shift, and go to state 1
    PABA        shift, and go to state 2
    KOOJ        shift, and go to state 3
    LOOBLE      shift, and go to state 4
    OPEN_BLOCK  shift, and go to state 5

    lista_comando  go to state 17
    bloco          go to state 8
    atribuicao     go to state 9
    comando        go to state 10
    if_comando     go to state 11


state 6

    0 $accept: programa . $end

    $end  shift, and go to state 18


state 7

    1 programa: lista_comando .

    $default  reduce using rule 1 (programa)


state 8

   17 comando: bloco .

    $default  reduce using rule 17 (comando)


state 9

   16 comando: atribuicao .

    $default  reduce using rule 16 (comando)


state 10

    2 lista_comando: comando . EOL lista_comando
    3              | comando . EOL

    EOL  shift, and go to state 19


state 11

   18 comando: if_comando .

    $default  reduce using rule 18 (comando)


state 12

    5 ident: ID .

    $default  reduce using rule 5 (ident)


state 13

   14 atribuicao: FIRBS ident . '=' exp

    '='  shift, and go to state 20


state 14

   13 atribuicao: PABA ident . '=' exp

    '='  shift, and go to state 21


state 15

   15 atribuicao: KOOJ ident . '=' exp

    '='  shift, and go to state 22


state 16

   24 if_comando: LOOBLE OPEN_BRACE . comparacao CLOSE_BRACE bloco
   25           | LOOBLE OPEN_BRACE . comparacao CLOSE_BRACE bloco WOOBLE bloco

    FIRBS  shift, and go to state 1
    PABA   shift, and go to state 2
    KOOJ   shift, and go to state 3

    atribuicao  go to state 23
    comparacao  go to state 24


state 17

    4 bloco: OPEN_BLOCK lista_comando . CLOSE_BLOCK

    CLOSE_BLOCK  shift, and go to state 25


state 18

    0 $accept: programa $end .

    $default  accept


state 19

    2 lista_comando: comando EOL . lista_comando
    3              | comando EOL .

    FIRBS       shift, and go to state 1
    PABA        shift, and go to state 2
    KOOJ        shift, and go to state 3
    LOOBLE      shift, and go to state 4
    OPEN_BLOCK  shift, and go to state 5

    $default  reduce using rule 3 (lista_comando)

    lista_comando  go to state 26
    bloco          go to state 8
    atribuicao     go to state 9
    comando        go to state 10
    if_comando     go to state 11


state 20

   14 atribuicao: FIRBS ident '=' . exp

    ID          shift, and go to state 12
    NUMINTEIRO  shift, and go to state 27
    NUMREAL     shift, and go to state 28

    ident          go to state 29
    exp            go to state 30
    soma           go to state 31
    subtracao      go to state 32
    divisao        go to state 33
    multiplicacao  go to state 34


state 21

   13 atribuicao: PABA ident '=' . exp

    ID          shift, and go to state 12
    NUMINTEIRO  shift, and go to state 27
    NUMREAL     shift, and go to state 28

    ident          go to state 29
    exp            go to state 35
    soma           go to state 31
    subtracao      go to state 32
    divisao        go to state 33
    multiplicacao  go to state 34


state 22

   15 atribuicao: KOOJ ident '=' . exp

    ID          shift, and go to state 12
    NUMINTEIRO  shift, and go to state 27
    NUMREAL     shift, and go to state 28

    ident          go to state 29
    exp            go to state 36
    soma           go to state 31
    subtracao      go to state 32
    divisao        go to state 33
    multiplicacao  go to state 34


state 23

   19 comparacao: atribuicao .

    $default  reduce using rule 19 (comparacao)


state 24

   24 if_comando: LOOBLE OPEN_BRACE comparacao . CLOSE_BRACE bloco
   25           | LOOBLE OPEN_BRACE comparacao . CLOSE_BRACE bloco WOOBLE bloco

    CLOSE_BRACE  shift, and go to state 37


state 25

    4 bloco: OPEN_BLOCK lista_comando CLOSE_BLOCK .

    $default  reduce using rule 4 (bloco)


state 26

    2 lista_comando: comando EOL lista_comando .

    $default  reduce using rule 2 (lista_comando)


state 27

    7 exp: NUMINTEIRO .

    $default  reduce using rule 7 (exp)


state 28

    6 exp: NUMREAL .

    $default  reduce using rule 6 (exp)


state 29

    8 exp: ident .

    $default  reduce using rule 8 (exp)


state 30

   14 atribuicao: FIRBS ident '=' exp .
   20 soma: exp . '+' exp
   21 subtracao: exp . '-' exp
   22 divisao: exp . '/' exp
   23 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 38
    '+'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 14 (atribuicao)


state 31

    9 exp: soma .

    $default  reduce using rule 9 (exp)


state 32

   10 exp: subtracao .

    $default  reduce using rule 10 (exp)


state 33

   11 exp: divisao .

    $default  reduce using rule 11 (exp)


state 34

   12 exp: multiplicacao .

    $default  reduce using rule 12 (exp)


state 35

   13 atribuicao: PABA ident '=' exp .
   20 soma: exp . '+' exp
   21 subtracao: exp . '-' exp
   22 divisao: exp . '/' exp
   23 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 38
    '+'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 13 (atribuicao)


state 36

   15 atribuicao: KOOJ ident '=' exp .
   20 soma: exp . '+' exp
   21 subtracao: exp . '-' exp
   22 divisao: exp . '/' exp
   23 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 38
    '+'  shift, and go to state 39
    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 15 (atribuicao)


state 37

   24 if_comando: LOOBLE OPEN_BRACE comparacao CLOSE_BRACE . bloco
   25           | LOOBLE OPEN_BRACE comparacao CLOSE_BRACE . bloco WOOBLE bloco

    OPEN_BLOCK  shift, and go to state 5

    bloco  go to state 42


state 38

   21 subtracao: exp '-' . exp

    ID          shift, and go to state 12
    NUMINTEIRO  shift, and go to state 27
    NUMREAL     shift, and go to state 28

    ident          go to state 29
    exp            go to state 43
    soma           go to state 31
    subtracao      go to state 32
    divisao        go to state 33
    multiplicacao  go to state 34


state 39

   20 soma: exp '+' . exp

    ID          shift, and go to state 12
    NUMINTEIRO  shift, and go to state 27
    NUMREAL     shift, and go to state 28

    ident          go to state 29
    exp            go to state 44
    soma           go to state 31
    subtracao      go to state 32
    divisao        go to state 33
    multiplicacao  go to state 34


state 40

   23 multiplicacao: exp '*' . exp

    ID          shift, and go to state 12
    NUMINTEIRO  shift, and go to state 27
    NUMREAL     shift, and go to state 28

    ident          go to state 29
    exp            go to state 45
    soma           go to state 31
    subtracao      go to state 32
    divisao        go to state 33
    multiplicacao  go to state 34


state 41

   22 divisao: exp '/' . exp

    ID          shift, and go to state 12
    NUMINTEIRO  shift, and go to state 27
    NUMREAL     shift, and go to state 28

    ident          go to state 29
    exp            go to state 46
    soma           go to state 31
    subtracao      go to state 32
    divisao        go to state 33
    multiplicacao  go to state 34


state 42

   24 if_comando: LOOBLE OPEN_BRACE comparacao CLOSE_BRACE bloco .
   25           | LOOBLE OPEN_BRACE comparacao CLOSE_BRACE bloco . WOOBLE bloco

    WOOBLE  shift, and go to state 47

    $default  reduce using rule 24 (if_comando)


state 43

   20 soma: exp . '+' exp
   21 subtracao: exp . '-' exp
   21          | exp '-' exp .
   22 divisao: exp . '/' exp
   23 multiplicacao: exp . '*' exp

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 21 (subtracao)


state 44

   20 soma: exp . '+' exp
   20     | exp '+' exp .
   21 subtracao: exp . '-' exp
   22 divisao: exp . '/' exp
   23 multiplicacao: exp . '*' exp

    '*'  shift, and go to state 40
    '/'  shift, and go to state 41

    $default  reduce using rule 20 (soma)


state 45

   20 soma: exp . '+' exp
   21 subtracao: exp . '-' exp
   22 divisao: exp . '/' exp
   23 multiplicacao: exp . '*' exp
   23              | exp '*' exp .

    $default  reduce using rule 23 (multiplicacao)


state 46

   20 soma: exp . '+' exp
   21 subtracao: exp . '-' exp
   22 divisao: exp . '/' exp
   22        | exp '/' exp .
   23 multiplicacao: exp . '*' exp

    $default  reduce using rule 22 (divisao)


state 47

   25 if_comando: LOOBLE OPEN_BRACE comparacao CLOSE_BRACE bloco WOOBLE . bloco

    OPEN_BLOCK  shift, and go to state 5

    bloco  go to state 48


state 48

   25 if_comando: LOOBLE OPEN_BRACE comparacao CLOSE_BRACE bloco WOOBLE bloco .

    $default  reduce using rule 25 (if_comando)
